--- a/app/src/main/res/layout/activity_f1_section02.xml
+++ b/app/src/main/res/layout/activity_f1_section02.xml
@@ -25,6 +25,7 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/HeadingTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/Section2" />
@@ -33,6 +34,7 @@
             <!--RS17 - Radio-->
             <android.support.v7.widget.CardView
                 android:id="@+id/RS17cv"
+                style="@style/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -73,6 +75,8 @@
 
             <!--RS18 - Radio-->
             <android.support.v7.widget.CardView
+                style="@style/cardView"
+
                 android:id="@+id/RS18cv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -132,6 +136,8 @@
             <!--RS19 - Radio-->
             <android.support.v7.widget.CardView
                 android:id="@+id/RS19cv"
+                style="@style/cardView"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -216,6 +222,8 @@
             <!--RS20 - Radio-->
             <android.support.v7.widget.CardView
                 android:id="@+id/RS20cv"
+                style="@style/cardView"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -284,6 +292,8 @@
 
             <!--RS21 - Radio-->
             <android.support.v7.widget.CardView
+                style="@style/cardView"
+
                 android:id="@+id/RS21cv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -325,6 +335,8 @@
 
             <!--RS22 - Date Picker-->
             <android.support.v7.widget.CardView
+                style="@style/cardView"
+
                 android:id="@+id/RS22cv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -343,7 +355,8 @@
 
                     <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                         android:id="@+id/RS22"
-                        style="@style/textInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:layout_weight="70"
                         android:focusable="false"
