--- a/app/src/main/res/layout/layout_dialoge.xml
+++ b/app/src/main/res/layout/layout_dialoge.xml
@@ -13,7 +13,11 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp">
+            android:layout_margin="8dp"
+            android:elevation="1dp"
+            android:layoutDirection="ltr"
+            android:padding="16dp"
+            app:cardCornerRadius="2dp">
 
 
             <RelativeLayout
@@ -236,8 +240,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/dialogCheck"
-                android:layout_gravity="center_horizontal"
-                android:drawablePadding="22dp"
+                android:drawablePadding="32dp"
                 android:textSize="24sp"
                 android:typeface="serif"
 
@@ -249,7 +252,14 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:padding="4dp">
-
+            <Button
+                android:id="@+id/start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_margin="4dp"
+                android:text="@string/yes"
+                android:textColor="@color/white" />
             <Button
                 android:id="@+id/cancel"
                 android:layout_width="wrap_content"
@@ -259,14 +269,6 @@
                 android:text="@string/no"
                 android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimary"
-                android:layout_margin="4dp"
-                android:text="@string/yes"
-                android:textColor="@color/white" />
 
         </LinearLayout>
 
