--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,6 +74,8 @@
         <item name="android:paddingTop">16dp</item>
         <item name="android:elevation">1dp</item>
         <item name="android:paddingStart">8dp</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:paddingEnd">8dp</item>
 
 
@@ -114,11 +116,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">0dp</item>
-        <item name="android:background">#d6d6d6</item>
+        <item name="android:background">#ffd6d6</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">18sp</item>
         <item name="android:typeface">serif</item>
+        <item name="android:textStyle">italic</item>
         <item name="android:visibility">invisible</item>
         <item name="android:padding">16dp</item>
     </style>
