--- a/app/src/main/res/layout/item_child_list.xml
+++ b/app/src/main/res/layout/item_child_list.xml
@@ -7,7 +7,7 @@
         style="@style/cardView"
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
-        android:layout_height="88dp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:elevation="1dp"
         android:padding="16dp"
